--- a/prompt_data/refined_data/project_data_카카오톡채널.json
+++ b/prompt_data/refined_data/project_data_카카오톡채널.json
@@ -16,7 +16,7 @@
             ]
         },
         {
-            "section_title": "카카오톡 채널 추가와 채팅"
+            "section_title": "카카오톡 채널 추가와 채팅",
             "section_content": [
                 "Kakao SDK를 통해 제공되는 카카오톡 채널 추가와 채팅 API는 카카오톡 채널로 이동할 수 있는 연결 페이지(Bridge page)를 띄우는 기능입니다. 연결 페이지는 사용자 진입 시 카카오톡 채널로 이동할지 묻는 팝업을 띄우고, 사용자가 이동에 동의하면 커스텀 URL 스킴(Custom URL Scheme)을 통해 카카오톡을 실행하고 해당 카카오톡 채널 화면으로 이동합니다. 사용자는 카카오톡 채널 화면에서 해당 카카오톡 채널을 친구로 추가하거나 1:1 채팅을 시작할 수 있습니다.",
                 "이 기능은 카카오톡 사용자만 이용할 수 있습니다. 카카오톡을 사용하지 않는 카카오계정으로 로그인한 사용자에게는 '이 계정과 연결된 카카오톡이 없습니다.'라는 문구가 포함된 안내 화면이 나타납니다.",
