Add refined data for generating embeddings

--- a/prompt_data/refined_data_for_embedding/project_data_카카오톡채널_channel_add.json
+++ b/prompt_data/refined_data_for_embedding/project_data_카카오톡채널_channel_add.json
@@ -1,12 +1,18 @@
 {
-    "section_title": "카카오톡 채널 추가와 채팅",
-    "section_content": [
-        "Kakao SDK를 통해 제공되는 카카오톡 채널 추가와 채팅 API는 카카오톡 채널로 이동할 수 있는 연결 페이지(Bridge page)를 띄우는 기능입니다. 연결 페이지는 사용자 진입 시 카카오톡 채널로 이동할지 묻는 팝업을 띄우고, 사용자가 이동에 동의하면 커스텀 URL 스킴(Custom URL Scheme)을 통해 카카오톡을 실행하고 해당 카카오톡 채널 화면으로 이동합니다. 사용자는 카카오톡 채널 화면에서 해당 카카오톡 채널을 친구로 추가하거나 1:1 채팅을 시작할 수 있습니다.",
-        "이 기능은 카카오톡 사용자만 이용할 수 있습니다. 카카오톡을 사용하지 않는 카카오계정으로 로그인한 사용자에게는 '이 계정과 연결된 카카오톡이 없습니다.'라는 문구가 포함된 안내 화면이 나타납니다.",
+    "title": "카카오톡 채널",
+    "purpose_of_document": "이 문서는 카카오톡 채널 API를 소개합니다.",
+    "document_body": [
         {
-            "subsection_title": "왜 사용자를 카카오톡으로 이동시키지 않고 연결 페이지만 띄우나요?",
-            "subsection_content": [
-                "일부 플랫폼은 OS 정책상 사용자를 특정 애플리케이션으로 이동시키는 행위가 제한돼 있습니다. 사용자가 직접 특정 웹 페이지나 애플리케이션을 한 번 실행시키는 것까지는 문제없지만, 여러 차례 사용자를 임의로 이동시키는 건 정책상 문제가 될 수 있습니다. OS 정책에 따라 오픈마켓 리뷰가 거절(Reject)되는 경우와 같은 문제를 피하기 위해 이 API는 연결 페이지 실행 기능만 제공합니다."
+            "section_title": "카카오톡 채널 추가와 채팅",
+            "section_content": [
+                "Kakao SDK를 통해 제공되는 카카오톡 채널 추가와 채팅 API는 카카오톡 채널로 이동할 수 있는 연결 페이지(Bridge page)를 띄우는 기능입니다. 연결 페이지는 사용자 진입 시 카카오톡 채널로 이동할지 묻는 팝업을 띄우고, 사용자가 이동에 동의하면 커스텀 URL 스킴(Custom URL Scheme)을 통해 카카오톡을 실행하고 해당 카카오톡 채널 화면으로 이동합니다. 사용자는 카카오톡 채널 화면에서 해당 카카오톡 채널을 친구로 추가하거나 1:1 채팅을 시작할 수 있습니다.",
+                "이 기능은 카카오톡 사용자만 이용할 수 있습니다. 카카오톡을 사용하지 않는 카카오계정으로 로그인한 사용자에게는 '이 계정과 연결된 카카오톡이 없습니다.'라는 문구가 포함된 안내 화면이 나타납니다.",
+                {
+                    "subsection_title": "왜 사용자를 카카오톡으로 이동시키지 않고 연결 페이지만 띄우나요?",
+                    "subsection_content": [
+                        "일부 플랫폼은 OS 정책상 사용자를 특정 애플리케이션으로 이동시키는 행위가 제한돼 있습니다. 사용자가 직접 특정 웹 페이지나 애플리케이션을 한 번 실행시키는 것까지는 문제없지만, 여러 차례 사용자를 임의로 이동시키는 건 정책상 문제가 될 수 있습니다. OS 정책에 따라 오픈마켓 리뷰가 거절(Reject)되는 경우와 같은 문제를 피하기 위해 이 API는 연결 페이지 실행 기능만 제공합니다."
+                    ]
+                }
             ]
         }
     ]
