--- a/prompt_data/refined_data_for_embedding/project_data_카카오톡채널_introduction.json
+++ b/prompt_data/refined_data_for_embedding/project_data_카카오톡채널_introduction.json
@@ -1,13 +1,19 @@
 {
-    "section_title": "기능 소개",
-    "section_content": [
-        "카카오톡 채널(구:플러스친구)은 카카오톡 사용자들에게 다양한 서비스 소식을 메시지와 게시물 형태로 전파할 수 있는 서비스입니다. 카카오톡 채널은 친구인 사용자들에게 마케팅(Marketing) 메시지를 보내는 기능을 제공합니다. 친구란 카카오톡 채널을 친구로 추가한 사용자를 말합니다. 카카오톡 채널 메시지는 비용 절감을 위해 사용자의 성별, 나이, 지역, 등급 등 정보를 토대로 친구 그룹을 만들어서 보다 높은 효과가 기대되는 사용자들에게만 발송하는 것도 가능합니다.",
-        "카카오톡 채널을 활용하여 서비스와 사용자의 관계를 더욱 긴밀하게 유지할 수 있습니다. 예를 들면 카카오톡 채널 메시지를 통해 사용자에게 서비스 웹 페이지 방문을 유도하거나 유익한 상품 정보의 링크를 제공하는 것이 가능합니다. 1:1 채팅, 스마트채팅, 봇 등 유용한 추가 기능들도 이용할 수 있습니다.",
-        "카카오톡 채널 API는 크게 두 가지의 기능을 제공합니다. 카카오톡 사용자를 위한 카카오톡 채널 추가 및 채팅 API, 다른 카카오톡 채널 관리자가 보다 편리하게 고객 그룹을 관리할 수 있도록 도와주는 카카오톡 채널 고객 관리 API가 있습니다. 두 API 모두 카카오톡 채널 프로필 ID를 사용해 요청하지만, 각각 역할과 제공 방식이 다릅니다.",
-        "카카오톡 채널 API를 사용하려면 앱과 카카오톡 채널이 연결되어 있어야 합니다. 또한 사용자의 '카카오톡 채널 추가 상태' 제공 동의가 필요합니다. 자세한 안내 및 설정 방법은 설정하기를 참고합니다.",
+    "title": "카카오톡 채널",
+    "purpose_of_document": "이 문서는 카카오톡 채널 API를 소개합니다.",
+    "document_body": [
         {
-            "subsection_title": "참고 - 카카오톡 채널 프로필 ID 확인 방법",
-            "subsection_content": "[카카오톡 채널 관리자센터] > [관리] > [상세설정]에서 카카오톡 채널의 채널 URL을 확인할 수 있습니다. 채널 URL에서 https://pf.kakao.com/ 부분을 제외한 뒷자리 값이 해당 카카오톡 채널의 프로필 ID입니다. 다음 예시를 참고합니다."
+            "section_title": "기능 소개",
+            "section_content": [
+                "카카오톡 채널(구:플러스친구)은 카카오톡 사용자들에게 다양한 서비스 소식을 메시지와 게시물 형태로 전파할 수 있는 서비스입니다. 카카오톡 채널은 친구인 사용자들에게 마케팅(Marketing) 메시지를 보내는 기능을 제공합니다. 친구란 카카오톡 채널을 친구로 추가한 사용자를 말합니다. 카카오톡 채널 메시지는 비용 절감을 위해 사용자의 성별, 나이, 지역, 등급 등 정보를 토대로 친구 그룹을 만들어서 보다 높은 효과가 기대되는 사용자들에게만 발송하는 것도 가능합니다.",
+                "카카오톡 채널을 활용하여 서비스와 사용자의 관계를 더욱 긴밀하게 유지할 수 있습니다. 예를 들면 카카오톡 채널 메시지를 통해 사용자에게 서비스 웹 페이지 방문을 유도하거나 유익한 상품 정보의 링크를 제공하는 것이 가능합니다. 1:1 채팅, 스마트채팅, 봇 등 유용한 추가 기능들도 이용할 수 있습니다.",
+                "카카오톡 채널 API는 크게 두 가지의 기능을 제공합니다. 카카오톡 사용자를 위한 카카오톡 채널 추가 및 채팅 API, 다른 카카오톡 채널 관리자가 보다 편리하게 고객 그룹을 관리할 수 있도록 도와주는 카카오톡 채널 고객 관리 API가 있습니다. 두 API 모두 카카오톡 채널 프로필 ID를 사용해 요청하지만, 각각 역할과 제공 방식이 다릅니다.",
+                "카카오톡 채널 API를 사용하려면 앱과 카카오톡 채널이 연결되어 있어야 합니다. 또한 사용자의 '카카오톡 채널 추가 상태' 제공 동의가 필요합니다. 자세한 안내 및 설정 방법은 설정하기를 참고합니다.",
+                {
+                    "subsection_title": "참고 - 카카오톡 채널 프로필 ID 확인 방법",
+                    "subsection_content": "[카카오톡 채널 관리자센터] > [관리] > [상세설정]에서 카카오톡 채널의 채널 URL을 확인할 수 있습니다. 채널 URL에서 https://pf.kakao.com/ 부분을 제외한 뒷자리 값이 해당 카카오톡 채널의 프로필 ID입니다. 다음 예시를 참고합니다."
+                }
+            ]
         }
     ]
 }
