--- a/prompt_data/refined_data_for_embedding/project_data_카카오톡채널_channel_management.json
+++ b/prompt_data/refined_data_for_embedding/project_data_카카오톡채널_channel_management.json
@@ -1,8 +1,14 @@
 {
-    "section_title": "카카오톡 채널 고객 관리",
-    "section_content": [
-        "카카오톡 채널 고객 관리 API를 사용하여 카카오톡 채널 관리자센터에서 제공하는 카카오톡 채널 고객 파일 등록 및 관리 기능을 API 방식으로 이용할 수 있습니다.",
-        "카카오톡 채널 고객 관리 API는 마케팅 시 보다 정교한 사용자 타게팅을 가능하게 합니다. 카카오 로그인이나 카카오싱크 간편가입을 적용한 서비스는 사용자 정보를 바탕으로 카카오톡 채널 고객 관리 API를 사용해 고객 파일을 등록하고, 해당 고객 파일을 대상으로 카카오톡 채널 관리자센터에서 원하는 조건에 따라 친구 그룹을 생성하여 타깃 메시지를 보낼 수 있습니다. 자세한 사항은 카카오톡 채널 관리자센터 공지사항을 참고합니다.",
-        "이 기능은 REST API 방식으로만 제공되며, 서버에서만 호출해야 합니다. 설정하기(https://developers.kakao.com/docs/latest/ko/kakaotalk-channel/prerequisite#admin-api)와 REST API(https://developers.kakao.com/docs/latest/ko/kakaotalk-channel/rest-api)를 참고합니다."
+    "title": "카카오톡 채널",
+    "purpose_of_document": "이 문서는 카카오톡 채널 API를 소개합니다.",
+    "document_body": [
+        {
+            "section_title": "카카오톡 채널 고객 관리",
+            "section_content": [
+                "카카오톡 채널 고객 관리 API를 사용하여 카카오톡 채널 관리자센터에서 제공하는 카카오톡 채널 고객 파일 등록 및 관리 기능을 API 방식으로 이용할 수 있습니다.",
+                "카카오톡 채널 고객 관리 API는 마케팅 시 보다 정교한 사용자 타게팅을 가능하게 합니다. 카카오 로그인이나 카카오싱크 간편가입을 적용한 서비스는 사용자 정보를 바탕으로 카카오톡 채널 고객 관리 API를 사용해 고객 파일을 등록하고, 해당 고객 파일을 대상으로 카카오톡 채널 관리자센터에서 원하는 조건에 따라 친구 그룹을 생성하여 타깃 메시지를 보낼 수 있습니다. 자세한 사항은 카카오톡 채널 관리자센터 공지사항을 참고합니다.",
+                "이 기능은 REST API 방식으로만 제공되며, 서버에서만 호출해야 합니다. 설정하기(https://developers.kakao.com/docs/latest/ko/kakaotalk-channel/prerequisite#admin-api)와 REST API(https://developers.kakao.com/docs/latest/ko/kakaotalk-channel/rest-api)를 참고합니다."
+            ]
+        }
     ]
 }
